samples/_failures_safe/1761643472_27a251_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bd82e93.c: In function ‘main’:
./samples/SAFE/__tmp_9bd82e93.c:181:16: error: expected ‘;’ at end of input
  181 |     free_matrix
      |                ^
      |                ;
./samples/SAFE/__tmp_9bd82e93.c:181:5: error: expected declaration or statement at end of input
  181 |     free_matrix
      |     ^~~~~~~~~~~
